antelope/libdsap/utility/stock_original/1
ask.c(51): warning #967: conversion from "char" to "void *"; sizes do not match
      if (fmt != NULL && *fmt != NULL)
                              ^

ask.c(106): warning #967: conversion from "char" to "void *"; sizes do not match
  	if (fmt != NULL && *fmt != NULL)
  	                        ^

dsap_glob.c(184): warning #266: function "cuserid" declared implicitly
  				cuserid(gpathp);
  				^

dsap_glob.c(188): warning #266: function "gethdir" declared implicitly
  			if (gethdir(gpath+1, gpath+1))
  			    ^

dsap_glob.c(242): error: pointer to incomplete class type is not allowed
  	if (fstat(dirp->dd_fd, &stb) < 0)
  	          ^

dsap_glob.c(618): warning #266: function "free" declared implicitly
  		free(*av++);
  		^

dsap_glob.c(625): warning #266: function "malloc" declared implicitly
  	register char *ep = malloc((unsigned)(strlen(cp) + strlen(dp) + 1));
  	                    ^

dsap_glob.c(628): warning #266: function "die" declared implicitly
  		die(1, "Out of memory");
  		^

dsap_glob.c(638): warning #266: function "malloc" declared implicitly
  	register char **nv = (char **)malloc((unsigned)((blklen(v) + 1) *
  	                              ^

dsap_glob.c(641): warning #266: function "die" declared implicitly
  		die(1, "Out of memory");
  		^

compilation aborted for dsap_glob.c (code 2)
dsap_regex.c(1414): warning #556: a value of type "regexp *" cannot be assigned to an entity of type "char *"
      prog = dsap_regcomp(exp) ; 
           ^

dsap_regex.c(1424): warning #180: argument is incompatible with formal parameter
      return dsap_regexec(prog, string) ;
                          ^

elog.c(87): error: identifier "mutex_t" is undefined
  static mutex_t Lock ; 
         ^

elog.c(199): warning #556: a value of type "void (*)()" cannot be assigned to an entity of type "__sighandler_t"
      action.sa_handler = _elog_fault ;
                        ^

elog.c(248): warning #266: function "mutex_lock" declared implicitly
  	mutex_lock ( &Lock ) ;
  	^

elog.c(254): warning #266: function "mutex_unlock" declared implicitly
  	mutex_unlock ( &Lock ) ;
  	^

elog.c(275): warning #266: function "mutex_lock" declared implicitly
  	mutex_lock ( &Lock ) ;
  	^

elog.c(277): warning #266: function "mutex_unlock" declared implicitly
  	mutex_unlock ( &Lock ) ;
  	^

elog.c(412): warning #266: function "thr_self" declared implicitly
  		    thread = thr_self() ; 
  		             ^

elog.c(565): warning #266: function "mutex_init" declared implicitly
      if ( mutex_init ( &Lock, USYNC_THREAD, 0) )
           ^

elog.c(565): error: identifier "USYNC_THREAD" is undefined
      if ( mutex_init ( &Lock, USYNC_THREAD, 0) )
                               ^

elog.c(568): warning #266: function "mutex_lock" declared implicitly
      mutex_lock ( &Lock ) ;
      ^

elog.c(595): warning #266: function "mutex_unlock" declared implicitly
      mutex_unlock ( &Lock ) ;
      ^

elog.c(733): warning #266: function "mutex_lock" declared implicitly
      mutex_lock ( &Lock ) ;
      ^

elog.c(737): warning #266: function "mutex_unlock" declared implicitly
      mutex_unlock ( &Lock ) ;
      ^

elog.c(839): warning #266: function "mutex_lock" declared implicitly
      mutex_lock ( &Lock) ; 
      ^

elog.c(841): warning #266: function "mutex_unlock" declared implicitly
      mutex_unlock ( &Lock) ; 
      ^

elog.c(850): warning #266: function "mutex_lock" declared implicitly
      mutex_lock ( &Lock) ; 
      ^

elog.c(852): warning #266: function "mutex_unlock" declared implicitly
      mutex_unlock ( &Lock) ; 
      ^

elog.c(868): warning #266: function "mutex_lock" declared implicitly
  	    mutex_lock ( &Lock) ; 
  	    ^

elog.c(870): warning #266: function "mutex_unlock" declared implicitly
  	    mutex_unlock ( &Lock) ; 
  	    ^

elog.c(939): warning #266: function "mutex_lock" declared implicitly
  	    mutex_lock ( &Lock) ; 
  	    ^

elog.c(941): warning #266: function "mutex_unlock" declared implicitly
  	    mutex_unlock ( &Lock) ; 
  	    ^

elog.c(1096): warning #266: function "mutex_lock" declared implicitly
      mutex_lock ( &Lock ) ; 
      ^

elog.c(1112): warning #266: function "mutex_unlock" declared implicitly
      mutex_unlock ( &Lock ) ; 
      ^

elog.c(1113): warning #266: function "addrtbl" declared implicitly
      *msgs = (char **) addrtbl(messages,0);
                        ^

compilation aborted for elog.c (code 2)
error_.c(40): warning #1193: standard requires that parameter "flag" be given a type by a subsequent declaration ("int" assumed)
  void clear_register__ ( flag ) 
                          ^

fill_random.c(38): warning #167: argument of type "unsigned long *" is incompatible with parameter of type "char *"
  	initstate(seed, state1, n);
  	                ^

fill_random.c(39): warning #167: argument of type "unsigned long *" is incompatible with parameter of type "char *"
  	setstate(state1);
  	         ^

glob.c(116): warning #266: function "blkfree" declared implicitly
  		blkfree(gargv), gargv = 0;
  		^

glob.c(183): warning #266: function "letter" declared implicitly
  		for (cs++; letter(*cs) || digit(*cs) || *cs == '-';)
  		           ^

glob.c(183): warning #266: function "digit" declared implicitly
  		for (cs++; letter(*cs) || digit(*cs) || *cs == '-';)
  		                          ^

glob.c(187): warning #266: function "cuserid" declared implicitly
  				cuserid(gpathp);
  				^

glob.c(191): warning #266: function "gethdir" declared implicitly
  			if (gethdir(gpath+1, gpath+1))
  			    ^

glob.c(197): warning #266: function "any" declared implicitly
  	while (!any(*cs, globchars)) {
  	        ^

glob.c(245): error: pointer to incomplete class type is not allowed
  	if (fstat(dirp->dd_fd, &stb) < 0)
  	          ^

glob.c(580): warning #266: function "any" declared implicitly
  	if (any(c, globchars))
  	    ^

glob.c(646): warning #266: function "free" declared implicitly
  		free(*av++);
  		^

glob.c(653): warning #266: function "malloc" declared implicitly
  	register char *ep = malloc((unsigned)(strlen(cp) + strlen(dp) + 1));
  	                    ^

glob.c(656): warning #266: function "die" declared implicitly
  		die(1, "Out of memory");
  		^

glob.c(666): warning #266: function "malloc" declared implicitly
  	register char **nv = (char **)malloc((unsigned)((blklen(v) + 1) *
  	                              ^

glob.c(669): warning #266: function "die" declared implicitly
  		die(1, "Out of memory");
  		^

compilation aborted for glob.c (code 2)
htond.c(148): warning #1011: missing return statement at end of non-void function "rev2"
  }
  ^

htond.c(171): warning #1011: missing return statement at end of non-void function "rev4"
  }
  ^

htond.c(201): warning #1011: missing return statement at end of non-void function "rev8"
  }
  ^

ignoreSIGPIPE.c(19): warning #556: a value of type "void (*)(int, siginfo_t *, ucontext_t *)" cannot be assigned to an entity of type "__sighandler_t"
      action.sa_handler = ignore ;
                        ^

ssearch_.c(26): warning #266: function "ssearch" declared implicitly
  	retcode = ssearch(key, keysize, index, nkeys, unique, compare, private, ns, ne );
  	          ^

tbl.c(739): warning #266: function "ssearch" declared implicitly
      return ssearch ( key, tbl->entry_size, tbl->base.cp, maxtbl(tbl), 0, 
             ^

template.c(91): warning #810: conversion from "void *" to "char" may lose significant bits
        = NULL;
          ^

template.c(112): warning #967: conversion from "char" to "void *"; sizes do not match
  	   != NULL)
  	   ^

tmpl.c(109): warning #967: conversion from "void *" to "char"; sizes do not match
      if ((NULL == comp_opt) || (NULL == *(comp_opt + 1)))
                                      ^

tmpl.c(748): warning #967: conversion from "char" to "void *"; sizes do not match
    while (*next != NULL)
                 ^

tmpl.c(1023): warning #967: conversion from "char" to "void *"; sizes do not match
      if (*directory == NULL)
                     ^

tmpl.c(1027): warning #967: conversion from "char" to "void *"; sizes do not match
      while (*directory != NULL)
                        ^

tmpl.c(1034): warning #810: conversion from "void *" to "char" may lose significant bits
  	*(directory + 1) = NULL;
  	                 ^

tmpl.c(1052): warning #967: conversion from "char" to "void *"; sizes do not match
      while (*directory != NULL)
                        ^

tmpl.c(1058): warning #810: conversion from "void *" to "char" may lose significant bits
  	*(directory - 1) = NULL;
  	                 ^

